# bananapeel

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: contributors.yml  lint.yml
config/: 99bananapeel  99tripwire  bananapeel.conf.sample  logrotate.bananapeel
docs/: FINAL-SETUP.md  PASSPHRASE-GUIDE.md  README.md
packaging/deb/debian/: changelog  control  postinst  postrm  rules
packaging/debian/: control.template
packaging/rpm/: bananapeel.spec.template
scripts/automation/: tripwire-auto-update.sh
scripts/lib/: bananapeel-lib.sh
scripts/maintenance/: status-check.sh
scripts/setup/: change-tripwire-passphrase.sh  install-tripwire-automation-crossplatform.sh  install-tripwire-automation.sh  migrate-service-user.sh  optimize-tripwire-policy.sh  rebuild-tripwire-database.sh  setup-tripwire-final.sh  setup-tripwire-service-account.sh  tripwire-summary.sh
scripts/wrappers/: tripwire-wrapper.sh
tests/: run_tests.sh
tests/functional/: quick_test.sh  test_automation.sh  test_deprecation_warnings.sh  test_installer_migration_path.sh  test_status_extensions.sh  test_user_migration.sh
tests/mocks/: find  hostname  logger  ls  mail  sendmail  sudo  tripwire  twprint
tools/bananapeel-tw/: Cargo.toml  README.md
tools/bananapeel-tw/src/: hashing.rs  main.rs  record.rs  scanner.rs
