[package]
name = "bananapeel-tw"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "High-performance Tripwire-like scanner with JSON output and parallel hashing"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
ignore = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

